# Projeto-ADS2

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/security/: ratelimt_and_CORS_security.py  table_whitelist_security.py
backend/data/: Sql_build.sql  database.sql
backend/model/: db.py  db_insert_stats.py  db_model_for_tabel.py  db_operations_id.py  db_scrape_base_stats.py  db_scrape_specific_stats.py  function_get_or_insert_id.py  function_insert_stats_data.py  function_scrape_base_tables.py  model_resolver.py  models.py
backend/routes/: base_data.py  route_delete.py  route_get.py  route_post.py  route_update.py  specific_stats.py  stats_data.py
backend/routes/docs/: route_schema_models.py
backend/scripts/: populate_dimensions.py  populate_facts.py  populate_status.py  seed_dimensions.py
backend/services/: data_uploader.py
backend/services/scripts/: populate_hero_lvl2.py  populate_lvl2.py  populate_lvl3.py  populate_scrape_map_lvl2.py  scrape_maps_lvl2.py
backend/utils/: data_populate_help.py  dependencies.py  extraction_helpers.py  function_execute.py  function_update_data.py
